[gd_scene load_steps=11 format=3 uid="uid://cgklqvsh5most"]

[ext_resource type="Theme" uid="uid://csbrpktbg5jqq" path="res://Themes/heading_fonts.tres" id="1_4b2n0"]
[ext_resource type="Script" uid="uid://oofcl55nvbe2" path="res://Scripts/credits.gd" id="1_a6jxa"]
[ext_resource type="Theme" uid="uid://cu3b5r8pq8ba1" path="res://Themes/home_button.tres" id="2_385kb"]
[ext_resource type="Theme" uid="uid://6dbvh2is3ah1" path="res://Themes/default.tres" id="3_rbf80"]
[ext_resource type="Theme" uid="uid://b5dig8unv68n1" path="res://Themes/medium_fonts.tres" id="4_a6jxa"]
[ext_resource type="Theme" uid="uid://cdsvsbygc0eyt" path="res://Themes/small_fonts.tres" id="5_qdawo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qdawo"]
bg_color = Color(0.686275, 0.760784, 0.956863, 0.478431)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Animation" id="Animation_a6jxa"]
resource_name = "Loading"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Loading_Animations/Loading:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.101961, -0.25, 0, 0.25, 0, 0.101961, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Loading_Animations/Loading:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.101961, -0.25, 0, 0.25, 0, 0.101961, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Loading_Animations/Loading:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.101961, -0.25, 0, 0.25, 0, 0.101961, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Loading_Animations/Loading:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_qdawo"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Loading_Animations/Loading:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.101961, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Loading_Animations/Loading:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.101961, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Loading_Animations/Loading:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.101961, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Loading_Animations/Loading:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v4g0v"]
_data = {
&"Loading": SubResource("Animation_a6jxa"),
&"RESET": SubResource("Animation_qdawo")
}

[node name="Credits Window" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a6jxa")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="Title" type="RichTextLabel" parent="CanvasLayer"]
custom_minimum_size = Vector2(300, 80)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 130.0
grow_horizontal = 2
theme = ExtResource("1_4b2n0")
text = "Credits"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main_Menu_Btn" type="Button" parent="CanvasLayer"]
custom_minimum_size = Vector2(80, 80)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_bottom = 80.0
grow_horizontal = 0
theme = ExtResource("2_385kb")
text = "X"

[node name="Seperator" type="Panel" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 84.0
offset_top = 150.0
offset_right = -84.0
offset_bottom = 155.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qdawo")

[node name="Credits Scroller" type="ScrollContainer" parent="CanvasLayer"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -275.0
offset_top = 200.0
offset_right = 275.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_rbf80")
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="Credits" type="VBoxContainer" parent="CanvasLayer/Credits Scroller"]
layout_mode = 2
theme = ExtResource("1_4b2n0")

[node name="Concept" type="VBoxContainer" parent="CanvasLayer/Credits Scroller/Credits"]
custom_minimum_size = Vector2(550, 100)
layout_mode = 2
theme = ExtResource("5_qdawo")

[node name="Title" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/Concept"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_rbf80")
text = "Concept & Idea:"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/Concept"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("4_a6jxa")
theme_override_colors/default_color = Color(0.497474, 0.497474, 0.497474, 1)
text = "Aditya Raj"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Programming" type="VBoxContainer" parent="CanvasLayer/Credits Scroller/Credits"]
custom_minimum_size = Vector2(550, 100)
layout_mode = 2
theme = ExtResource("5_qdawo")

[node name="Title" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/Programming"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_rbf80")
text = "Programming:"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/Programming"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("4_a6jxa")
theme_override_colors/default_color = Color(0.497474, 0.497474, 0.497474, 1)
text = "Aditya Raj"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Animations" type="VBoxContainer" parent="CanvasLayer/Credits Scroller/Credits"]
custom_minimum_size = Vector2(550, 100)
layout_mode = 2
theme = ExtResource("5_qdawo")

[node name="Title" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/Animations"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_rbf80")
text = "Animations:"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/Animations"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("4_a6jxa")
theme_override_colors/default_color = Color(0.497474, 0.497474, 0.497474, 1)
text = "Aditya Raj"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="History System" type="VBoxContainer" parent="CanvasLayer/Credits Scroller/Credits"]
custom_minimum_size = Vector2(550, 100)
layout_mode = 2
theme = ExtResource("5_qdawo")

[node name="Title" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/History System"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_rbf80")
text = "History System:
"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/History System"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("4_a6jxa")
theme_override_colors/default_color = Color(0.497474, 0.497474, 0.497474, 1)
text = "Aditya Raj"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Themes" type="VBoxContainer" parent="CanvasLayer/Credits Scroller/Credits"]
custom_minimum_size = Vector2(550, 100)
layout_mode = 2
theme = ExtResource("5_qdawo")

[node name="Title" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/Themes"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_rbf80")
text = "Themes & Designs:"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/Themes"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("4_a6jxa")
theme_override_colors/default_color = Color(0.497474, 0.497474, 0.497474, 1)
text = "Aditya Raj"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fonts" type="VBoxContainer" parent="CanvasLayer/Credits Scroller/Credits"]
custom_minimum_size = Vector2(550, 100)
layout_mode = 2
theme = ExtResource("5_qdawo")

[node name="Title" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/Fonts"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_rbf80")
text = "Fonts:"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/Fonts"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("4_a6jxa")
theme_override_colors/default_color = Color(0.497474, 0.497474, 0.497474, 1)
text = "FontSpace"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Link" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/Fonts"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("4_a6jxa")
theme_override_colors/default_color = Color(0.497474, 0.497474, 0.497474, 1)
text = "(fontspace.com)"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Softwares Used" type="VBoxContainer" parent="CanvasLayer/Credits Scroller/Credits"]
custom_minimum_size = Vector2(550, 100)
layout_mode = 2
theme = ExtResource("5_qdawo")

[node name="Title" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/Softwares Used"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_rbf80")
text = "Softwares Used:"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name 1" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/Softwares Used"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("4_a6jxa")
theme_override_colors/default_color = Color(0.497474, 0.497474, 0.497474, 1)
text = "Godot Engine (IDE)"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name 2" type="RichTextLabel" parent="CanvasLayer/Credits Scroller/Credits/Softwares Used"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("4_a6jxa")
theme_override_colors/default_color = Color(0.497474, 0.497474, 0.497474, 1)
text = "Krita (For Assets)"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator2" type="Panel" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 84.0
offset_top = -62.0
offset_right = -84.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_qdawo")

[node name="Loading_Animations" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Loading" type="ColorRect" parent="CanvasLayer/Loading_Animations"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="MM_Loading" type="Panel" parent="CanvasLayer/Loading_Animations"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_bottom = 80.0
grow_horizontal = 0
theme = ExtResource("2_385kb")

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v4g0v")
}

[node name="Loading_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="CanvasLayer/Main_Menu_Btn" to="." method="_on_main_menu_btn_pressed"]
[connection signal="timeout" from="Loading_Timer" to="." method="_on_loading_timer_timeout"]
